--- a/index.html
+++ b/index.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>goit-markup-hw-01</title>
 </head>
 <body>
    <!--Шапка-->
     <header>
         <nav>
-           <a href="/">
-                <img src="/images/WebStudiowebstudio.jpg">
-           </a>
+           <p>WebStudio</p>
 
 
            <ul>
@@ -32,9 +30,84 @@
 
    <div>
        <section>
-           <h1>Эффективные решения для вашего бизнеса</h1>
+           <h1>Эффективные решения <br> для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
        </section>
    </div>
+
+<!-- качества -->
+   <section>
+       <ul>
+           <il>
+               <h3>Внимание к деталям</h3>
+                    <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+           </il>
+
+           <il>
+               <h3>Пунктуальность</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+           </il>
+
+           <il>
+               <h3>Планирование</h3>
+                    <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+           </il>
+
+           <il>
+               <h3>Современные технологии</h3>
+                    <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+           </il>
+
+       </ul>
+    </section>
+
+<!-- чем мы занимаемся -->
+    <section>
+        <h3>Чем мы занимаемся</h3>
+       <ul>
+           <il><img src="images/img1.jpg" alt="create web sites" width="370"></il>
+           <il><img src="images/img 2.jpg" alt="create phones apps" width="370"></il>
+           <il><img src="images/img3.jpg" alt="" width="370"></il>
+       </ul>
+   </section>
+
+   <!-- наша команда -->
+   <section>
+       <h3>Наша команда</h3>
+       <ul>
+           <il>
+               <figure>
+                   <img src="/images/imgteam card 1.jpg" alt="product disigner" width="270">
+                   <figcaption>Игорь Демьяненко <br> Product Designer</figcaption>
+               </figure>
+            </il>
+
+           <il>
+               <figure>
+                    <img src="images/imgteam card 2.jpg" alt="Frontend Developer" width="270">
+                    <figcaption>Ольга Репина Frontend Developer</figcaption>
+               </figure>
+           </il>
+
+            <il>
+                <figure>
+               <img src="images/imgteam card 3.jpg" alt="Marketing" width="270">
+               <figcaption>Николай Тарасов Marketing</figcaption>
+           </figure>
+            </il>
+
+           <il>
+               <figure>
+                <img src="images/imgcard team 4.jpg" alt="UI Designer" width="270">
+                <figcaption>Михаил Ермаков UI Designer</figcaption>
+            </figure>
+            </il>
+       </ul>
+   <footer>
+        <address>
+            
+        </address>
+   </footer>
+
 </body>
 </html>
