--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="rus">
 
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>goit-markup-hw-01</title>
     <meta charset="UTF-8">
+    <title>goit-markup-hw-01</title>
 </head>
 
 <body>
     <!--Шапка-->
     <header>
         <nav>
-            <a href="/">WebStudio</a>
+            <a href="./index.html">WebStudio</a>
             <ul>
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
@@ -30,13 +30,15 @@
 
     <main>
         <section>
-            <h1>Эффективные решения <br> для вашего бизнеса</h1>
+            <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
 
         <!-- качества -->
 
         <section>
+            <h2>Принципы работы</h2>
+
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -76,25 +78,25 @@
             <h3>Наша команда</h3>
             <ul>
                 <li>
-                    <img src="./images/cardteam1.jpg" alt="product disigner" width="270">
+                    <img src="./images/cardteam1.jpg" alt="Продукт дизайнер" width="270">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <img src="./images/cardteam2.jpg" alt="Frontend Developer" width="270">
+                    <img src="./images/cardteam2.jpg" alt="Фронтэнд бэкэнд разработчик" width="270">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
-                    <img src="./images/cardteam3.jpg" alt="Marketing" width="270">
+                    <img src="./images/cardteam3.jpg" alt="Маркетинг" width="270">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="./images/cardteam4.jpg" alt="UI Designer" width="270">
+                    <img src="./images/cardteam4.jpg" alt="UI дизайнер" width="270">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
@@ -103,18 +105,17 @@
 
     </main>
     <footer>
-        <p>WebStudio</p>
+        <a href="./index.html">WebStudio</a>
 
         <address>
             г. Киев, пр-т Леси Украинки, 26
         </address>
 
-        <address>
             <ul>
+                <li><a href="https://goo.gl/maps/XhM94hMd3VPiRtqM8" target="_blank" rel="noreferrer noopener">Проложить маршрут</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
-        </address>
 
     </footer>
 
