--- a/index.html
+++ b/index.html
@@ -17,15 +17,13 @@
                 <li><a href="">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
-
             </ul>
         </nav>
 
         <ul>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
-
     </header>
 
     <main>
@@ -108,15 +106,13 @@
         <a href="./index.html">WebStudio</a>
 
         <address>
-            г. Киев, пр-т Леси Украинки, 26
-        </address>
-
             <ul>
-                <li><a href="https://goo.gl/maps/XhM94hMd3VPiRtqM8" target="_blank" rel="noreferrer noopener">Проложить маршрут</a></li>
+                <li><a href="https://goo.gl/maps/XhM94hMd3VPiRtqM8" target="_blank" rel="noreferrer noopener">г. Киев,
+                        пр-т Леси Украинки, 26</a></li>
                 <li><a href="mailto:info@example.com">info@example.com</a></li>
                 <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
-
+        </address>
     </footer>
 
 </body>
