--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
-    <title>goit-markup-hw-01</title>
+    <title>WebStudio</title>
 </head>
 
 <body>
@@ -65,9 +65,9 @@
         <section>
             <h3>Чем мы занимаемся</h3>
             <ul>
-                <li><img src="./images/img1.jpg" alt="веб приложения" width="370"> </li>
-                <li><img src="./images/img2.jpg" alt="мобильные приложения" width="370"> </li>
-                <li><img src="./images/img3.jpg" alt="дизайнерские решения" width="370"> </li>
+                <li><img src="./images/job/webapp.jpg" alt="веб приложения" width="370"> </li>
+                <li><img src="./images/job/mobapp.jpg" alt="мобильные приложения" width="370"> </li>
+                <li><img src="./images/job/design.jpg" alt="дизайнерские решения" width="370"> </li>
             </ul>
         </section>
 
@@ -76,25 +76,25 @@
             <h3>Наша команда</h3>
             <ul>
                 <li>
-                    <img src="./images/cardteam1.jpg" alt="Продукт дизайнер" width="270">
+                    <img src="./images/team/cardteam1.jpg" alt="Продукт дизайнер" width="270">
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <img src="./images/cardteam2.jpg" alt="Фронтэнд бэкэнд разработчик" width="270">
+                    <img src="./images/team/cardteam2.jpg" alt="Фронтэнд бэкэнд разработчик" width="270">
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
-                    <img src="./images/cardteam3.jpg" alt="Маркетинг" width="270">
+                    <img src="./images/team/cardteam3.jpg" alt="Маркетинг" width="270">
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="./images/cardteam4.jpg" alt="UI дизайнер" width="270">
+                    <img src="./images/team/cardteam4.jpg" alt="UI дизайнер" width="270">
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
